log
Fri May  6 15:45:17 UTC 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
3c8c917
Fri May  6 15:46:00 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3d83bf8
Fri May  6 15:47:34 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:3: error: expected ‘(’ before ‘return’
   return pq->heapArray[0].data;
   ^~~~~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
ee95ed7
Fri May  6 15:51:11 UTC 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
078d5e0
Fri May  6 15:52:31 UTC 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b9ef419
Fri May  6 16:13:16 UTC 2022: 
 heap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:32:46: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
     pq->heapArray = realloc(pq->heapArray, 2*heap->capac + 1);
                                              ^~~~
                                              Heap
heap.c:32:46: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   void * aux_d:
               ^
heap.c:36:15: error: expected expression before ‘:’ token
heap.c:43:5: error: ‘aux_d’ undeclared (first use in this function); did you mean ‘aux_p’?
     aux_d = pq->heapArray[(ext-1)/2].data;
     ^~~~~
     aux_p
Compilation failed
802dfe2
Fri May  6 16:15:59 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:32:45: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
     pq->heapArray = realloc(pq->heapArray, (heap->capac*2 + 1)*sizeof(heapElem));
                                             ^~~~
                                             Heap
heap.c:32:45: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   void * aux_d:
               ^
heap.c:36:15: error: expected expression before ‘:’ token
heap.c:43:5: error: ‘aux_d’ undeclared (first use in this function); did you mean ‘aux_p’?
     aux_d = pq->heapArray[(ext-1)/2].data;
     ^~~~~
     aux_p
Compilation failed
a9b90d7
Fri May  6 16:16:19 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:36:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   void * aux_d:
               ^
heap.c:36:15: error: expected expression before ‘:’ token
heap.c:43:5: error: ‘aux_d’ undeclared (first use in this function); did you mean ‘aux_p’?
     aux_d = pq->heapArray[(ext-1)/2].data;
     ^~~~~
     aux_p
heap.c:43:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2d67fbd
Fri May  6 16:17:01 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
a8d2283
Fri May  6 16:19:01 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 25/70
509d642
Fri May  6 16:19:41 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
e41f110
Fri May  6 16:22:05 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
8eaa86b
Fri May  6 16:23:10 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
a30b956
Fri May  6 16:26:55 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
552af97
Sat May  7 00:32:49 UTC 2022: 
 heap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:82:14: error: unused variable ‘aux2’ [-Werror=unused-variable]
       void * aux2 = pq->heapArray[place].data;
              ^~~~
cc1: all warnings being treated as errors
Compilation failed
88331b1
